build: readme
